--- a/package.json
+++ b/package.json
@@ -8,21 +8,35 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@mdi/js": "^4.4.95",
     "core-js": "^2.6.5",
+    "firebase": "^6.6.2",
+    "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
+    "vue-responsive": "^1.1.0",
+    "vue-responsive-components": "^0.2.3",
     "vue-router": "^3.0.3",
+    "vue-simple-drawer": "^1.0.5",
+    "vue-simple-spinner": "^1.2.8",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@mdi/font": "^4.4.95",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "sass": "^1.18.0",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.6.10",
+    "vue-validate": "^1.0.1",
+    "vue-loader": "^15.7.1"
   },
   "eslintConfig": {
     "root": true,
