--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
+    "vue-lazyload": "^1.3.3",
     "vue-responsive": "^1.1.0",
     "vue-responsive-components": "^0.2.3",
     "vue-router": "^3.0.3",
     "vue-simple-drawer": "^1.0.5",
     "vue-simple-spinner": "^1.2.8",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -36,7 +38,7 @@
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10",
     "vue-validate": "^1.0.1",
-    "vue-loader": "^15.7.1"
+    "vue-loader": "^15.7.2"
   },
   "eslintConfig": {
     "root": true,
